--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.2.19",
     "css-loader": "^6.10.0",
     "date-fns": "^3.3.1",
+    "html-webpack-plugin": "^5.6.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
